# rust_scraping

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parsers.rs
