[package]
name = "rust_scraping"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["--cfg", "tokio_unstable"]

[dependencies]
reqwest = { version = "0.11.9", features = ["gzip"] }
futures = "0.3.20"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
scraper = "0.12.0"
indicatif = "0.16.2"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3.0"
reqwest-retry = "0.1.4"
reqwest-middleware = "0.1.5"
